# SoccerBootsRecommendProject

./: .gitignore  CMakeLists.txt  README.md  main.cpp
api/: ApiServer.cpp  ApiServer.h  RecommendationController.cpp  RecommendationController.h
data/: SoccerPlayerBoots.cpp  SoccerPlayerBoots.h
datasets/: germany-bundesliga-players_boots.csv  premier-league-players_boots.csv  spain-laliga-players_boots.csv
model/: SoccerBootsBayesianModel.cpp  SoccerBootsBayesianModel.h  SoccerBootsBayesianTrainer.cpp  SoccerBootsBayesianTrainer.h  SoccerBootsRecommender.cpp  SoccerBootsRecommender.h
reader/: SoccerPlayerBootsDataCsvReader.h
